Switch to Foundation framework, enable editing of gists, show lists of your gists, enable log in and log out, and a bunch of other things. Sorry for this non-atomic commit.

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -17,7 +17,7 @@
 // We use these to control various global styles
 $body-bg: #efefef;
 // $body-font-color: #222;
-$body-font-family: "Open Sans", sans-serif;
+$body-font-family: 'Open Sans', sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
@@ -670,7 +670,7 @@ $header-font-family: "Open Sans", sans-serif;
 //
 
 // We use these to control the background and border styles
-// $panel-bg: darken(#fff, 5%);
+$panel-bg: #fff;
 // $panel-border-style: solid;
 // $panel-border-size: 1px;
 
