--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -13,5 +13,5 @@ h2 Sign up
     = f.label :password_confirmation
     br/
     = f.password_field :password_confirmation
-  div= f.submit "Sign up"
+  div= f.button "Sign up"
 = render "devise/shared/links"
