--- a/app/views/gists/_gist_in_search.html.slim
+++ b/app/views/gists/_gist_in_search.html.slim
@@ -1,17 +1,18 @@
 .row.gist_author
-  .span12
-    div
-      span
-        strong Gist author:&nbsp;
-        = gist.author_name
-      span.created_at &nbsp;Created: #{distance_of_time_in_words_to_now(gist.created_at)} ago
-    div.content
-      | <strong>Gist:&nbsp;</strong>
-      == gist.content_html
-    div
-      span.score id="gist_#{gist.id}"
-        = gist.score
-      | &nbsp;
-      = link_to 'I get it', vote_up_path(id: gist.id), class: 'vote_up'
-      | &nbsp;/&nbsp;
-      = link_to "I don't get it", vote_down_path(id: gist.id), class: 'vote_down'
+  .large-12.columns
+    div.panel
+      div
+        span
+          strong Gist author:&nbsp;
+          = gist.author_name
+        span.created_at &nbsp;Created: #{distance_of_time_in_words_to_now(gist.created_at)} ago
+      div.content
+        | <strong>Gist:&nbsp;</strong>
+        == gist.content_html
+      div
+        span.score id="gist_#{gist.id}"
+          = gist.score
+        | &nbsp;
+        = link_to 'I get it', vote_up_path(id: gist.id), class: 'vote_up'
+        | &nbsp;/&nbsp;
+        = link_to "I don't get it", vote_down_path(id: gist.id), class: 'vote_down'
