--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,12 +6,11 @@ doctype html
 == "<!--[if IE 9 ]>    <html class=\"ie9\" lang=\"en\"> <![endif]-->"
 == "<!--[if (gt IE 9)|!(IE)]><!--> <html lang=\"en\"> <!--<![endif]-->"
 head
+  link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'
   meta charset="utf-8"
   / Set the viewport width to device width for mobile
   meta name="viewport" content="width=device-width, initial-scale=1.0"
-
-  title= content_for?(:title) ? yield(:title) : "Untitled"
-
+  title= content_for?(:title) ? yield(:title) : "ScienceGist - Simplifiying science"
   = stylesheet_link_tag "application"
   = javascript_include_tag "vendor/custom.modernizr"
   = javascript_include_tag "application"
