--- a/app/views/pages/_search_form.html.slim
+++ b/app/views/pages/_search_form.html.slim
@@ -5,4 +5,4 @@
         .small-9.columns
           = text_field_tag(:search, params[:search], class: " input-medium search-query",placeholder: 'Search papers by DOI or title')
         .small-3.columns
-          = button_tag "Search", type: 'submit', class: "button prefix"
+          = button_tag "Search", type: 'submit', class: "btn prefix"
