--- a/app/views/papers/_paper.html.slim
+++ b/app/views/papers/_paper.html.slim
@@ -1,10 +1,10 @@
 .row.paper_container
-  .span12
+  .large-12.columns
     .gist_container
       .paper
         h3 #{paper.title}
         div.info
-          span.paper_author Authors: #{paper.authors}
+          span.paper_authors Authors: #{paper.authors}
       .gists
         - paper.gists.order('score desc').each do |gist|
           = render 'gists/gist_in_search', gist: gist
