--- a/app/views/gists/_form.html.slim
+++ b/app/views/gists/_form.html.slim
@@ -1,16 +1,12 @@
-h2#title
-h5#authors
-h5#journal
-
 p
   strong Identifier (DOI or arXiv)&nbsp;
   | First, tell us which paper this gist is for, by providing it's identifier:
 = f.simple_fields_for :paper do |p|
+  = p.input :identifier, label: 'DOI or arXiv', placeholder: 'DOI (e.g. “doi: 10.1021/ac1014832”) or arXiv identifier (e.g. “arXiv:1301.7746”)'
+  = p.input :title, input_html: { id: 'title'}, placeholder: 'Fill in identifier above'
   = p.simple_fields_for :metadata do |m|
-    = m.hidden_field :authors, id: 'hidden_authors'
-    = m.hidden_field :journal, id: 'hidden_journal'
-  = p.hidden_field :title, id: 'hidden_title'
-  = p.input :identifier, label: false, placeholder: 'DOI (e.g. “doi: 10.1021/ac1014832”) or arXiv identifier (e.g. “arXiv:1301.7746”)'
+    = m.input :authors, input_html: { id: 'authors', value: paper.metadata[:authors]}, required: false, placeholder: 'Fill in identifier above'
+    = m.input :journal, input_html: { id: 'journal', value: paper.metadata[:journal]}, required: false, placeholder: 'Fill in identifier above'
 p
   strong Gist&nbsp;
   | Describe in simple terms what the paper is about:
