--- a/app/views/gists/edit.html.slim
+++ b/app/views/gists/edit.html.slim
@@ -1,2 +1,3 @@
-h1 Gists#edit
-p Find me in app/views/gists/edit.html.slim
+h1 Edit
+= simple_form_for @gist do |f|
+  = render 'form', f: f, paper: @gist.paper
