Add Google Analytics and contact e-mail

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -144,3 +144,9 @@ a:hover {
 .alert-box {
   border-color: rgba($color, 0);
 }
+
+.contact {
+  margin-top: 4em;
+  text-align: center;
+  font-size: 12px;
+}
