--- a/app/views/gists/new.html.slim
+++ b/app/views/gists/new.html.slim
@@ -10,3 +10,7 @@
   h3 Add a new gist
   = simple_form_for @gist do |f|
     = render 'form', f: f, paper: @gist.paper
+.center
+  p 
+    | Gists are licensed under the&nbsp;
+    = link_to 'CC-BY license.', 'http://creativecommons.org/licenses/by/2.0/'
