Fix for displaying gists

--- a/app/views/gists/_gist.html.slim
+++ b/app/views/gists/_gist.html.slim
@@ -14,6 +14,6 @@
           strong Gist:&nbsp;
         == gist.content_html
       ul.inline-list.actions
-        - if gist.user == current_user
+        - if current_user && gist.user == current_user
           li= link_to 'Edit', edit_gist_path(gist.id)
         li=link_to 'Link', gist_path(gist.id)
