Add link to API to landing page

--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -13,7 +13,8 @@
         = link_to 'Add gist', new_gist_path, :class => 'btn'
 .row
   .large-6.large-offset-3.columns
-    ul.small-block-grid-3.contact
+    ul.small-block-grid-4.contact
       li= link_to 'Contact us', 'mailto:info@sciencegist.com'
       li= link_to 'GitHub', 'https://github.com/jure/sciencegist'
       li= link_to 'Twitter', 'https://www.twitter.com/sciencegist'
+      li= link_to 'API', 'http://www.sciencegist.com/api/v1/gists'
