--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -7,8 +7,10 @@
   .large-8.large-offset-2.columns
     .add_gist_box
       div.welcome
-        p.title BRIDGE THE SCIENCE GAP
-        p Welcome to the ScienceGist community where we respect and nurture the art of simplifiying very complex concepts into clear and concise ideas. Our source of complexity are scientific papers. Click “Add gist” below to join us.
+        p 
+          | ScienceGists are simplified summaries of scientific papers. ScienceGist's goal is to provide a&nbsp;
+          = link_to 'simple English', 'https://simple.wikipedia.org/wiki/Simple_English_Wikipedia'
+          |  version of science. Click “Add gist” below to help.
       .add_gist
         = link_to 'Add gist', new_gist_path, :class => 'btn'
 .row
