--- a/app/views/gists/_form.html.slim
+++ b/app/views/gists/_form.html.slim
@@ -1,6 +1,6 @@
 p
   strong Identifier (DOI or arXiv)&nbsp;
-  | First, tell us which paper this gist is for, by providing it's identifier:
+  | First, tell us which paper this gist is for, by providing its identifier:
 = f.simple_fields_for :paper do |p|
   = p.input :identifier, label: 'DOI or arXiv', placeholder: 'DOI (e.g. “doi: 10.1021/ac1014832”) or arXiv identifier (e.g. “arXiv:1301.7746”)'
   = p.input :title, input_html: { id: 'title'}, placeholder: 'Fill in identifier above'
