--- a/app/assets/stylesheets/mixins.css.scss
+++ b/app/assets/stylesheets/mixins.css.scss
@@ -1,5 +1,3 @@
-@import "compass/css3/box-shadow";
-
 @mixin nice_shadow {
-  @include box-shadow($shadow_color 2px 2px 2px);
+  box-shadow: 2px 2px 2px $shadow_color;
 }
