Update Foundation and add initial about page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,8 @@
 
 @import "variables";
 @import "foundation_and_overrides";
+@import "settings";
+@import 'foundation';
 @import "mixins";
 @import "pages";
 @import "papers";
