--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -4,12 +4,13 @@ nav.top-bar
       h1
         a href="/"
           = image_tag 'sciencegist-logo-small.png', class: 'logo', width: 24, height: 24
-          | ScienceGist
     li.toggle-topbar.menu-icon
       a href="#"
         span
 
   section class="top-bar-section"
+    ul.left
+      li= link_to 'About', pages_about_path
     ul.right
       li.divider
       li= link_to 'Add gist', new_gist_path
