--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -8,5 +8,6 @@ $shadow_color: darken($background_color,5);
 
 $box_color: white;
 //Theme colors
-$color_1: #2ab573;
+$color_green: $color;
+$color_red: #c13326;
 $placeholder_color: darken($shadow_color, 20);
