--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,7 +6,7 @@ doctype html
 == "<!--[if IE 9 ]>    <html class=\"ie9\" lang=\"en\"> <![endif]-->"
 == "<!--[if (gt IE 9)|!(IE)]><!--> <html lang=\"en\"> <!--<![endif]-->"
 head
-  link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'
+  link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'
   meta charset="utf-8"
   / Set the viewport width to device width for mobile
   meta name="viewport" content="width=device-width, initial-scale=1.0"
@@ -24,7 +24,7 @@ body*{:class => "#{controller.controller_name}_#{controller.action_name}" }
         .alert-box= notice
       - if flash[:alert]
         .alert-box.alert= alert
-      = yield
+  = yield
 
   javascript:
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
