--- a/app/assets/stylesheets/papers.css.scss
+++ b/app/assets/stylesheets/papers.css.scss
@@ -2,3 +2,19 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.paper_metadata {
+  margin-bottom: 2em;
+  font-weight: normal;
+}
+
+.paper_gists {
+
+}
+
+.paper_title {
+  margin-bottom: 0;
+}
+
+.add_gist {
+  margin: 2em;
+}
