--- a/app/assets/stylesheets/gists.css.scss
+++ b/app/assets/stylesheets/gists.css.scss
@@ -2,3 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.gist, .header {
+  h1 {
+    font-size: emCalc(23px);
+  }
+}
