--- a/app/views/gists/_form.html.slim
+++ b/app/views/gists/_form.html.slim
@@ -12,4 +12,4 @@ p
   | Describe in simple terms what the paper is about:
 = f.input :content, label: false, placeholder: 'The Gist'
 .submit
-  = f.button :submit, :class => 'btn'
+  = f.button :submit, :class => 'button'
