--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -8,12 +8,11 @@
     .add_gist_box
       div.welcome
         p 
-          | ScienceGists are simplified summaries of scientific papers. ScienceGist's goal is to provide a&nbsp;
+          | ScienceGists are simplified summaries of scientific papers. ScienceGist’s goal is to provide a&nbsp;
           = link_to 'simple English', 'https://simple.wikipedia.org/wiki/Simple_English_Wikipedia'
           |  version of science. Click “Add gist” below to help.
       .add_gist
         = link_to 'Add gist', new_gist_path, :class => 'button'
-.separator
 .example_container
   .row
     .large-12.columns
@@ -23,7 +22,7 @@
 
       .abstract
         markdown:
-          ### Abstract
+          #### Abstract
           
           The Canadian Penning Trap mass spectrometer has made mass measurements of 33 neutron-rich nuclides provided by the new Californium Rare Isotope Breeder Upgrade (CARIBU) facility at Argonne National Laboratory. The studied region includes the 132Sn double shell closure and ranges in Z from In to Cs, with Sn isotopes measured out to A = 135, and the typical measurement precision is at the 100 ppb level or better. The region encompasses a possible major waiting point of the astrophysical r process, and the impact of the masses on the r process is shown through a series of simulations. These first-ever simulations with direct mass information on this waiting point show significant increases in waiting time at Sn and Sb in comparison with commonly used mass models, demonstrating the inadequacy of existing models for accurate r-process calculations.
 
@@ -32,7 +31,7 @@
         
       .gist
         markdown:
-          ### Gist
+          #### Gist
           
           This is a nuclear astrophysics paper that describes some new nuclear physics measurements that help us understand how heavy elements are made in core-collapse supernovae. A brand new facility provided radioactive nuclei from nuclear fission &mdash; some of the same nuclei which exist during supernovae like those which may have made the heavy elements in the Earth. These nuclei were trapped in a magnetic field, and their masses were measured to a precision of around 0.000007%, which tells us their binding energies. Theoretical physicists haven’t figured out how to calculate what the binding energies of different nuclei are from theory yet, so we only have rough guesses called “mass models” unless we go out and measure them like this.
 
@@ -44,7 +43,8 @@
 
 .row
   .large-6.large-offset-3.columns
-    ul.small-block-grid-4.contact
+    ul.small-block-grid-5.contact
+      li= link_to 'About', pages_about_path
       li= link_to 'Contact us', 'mailto:info@sciencegist.com'
       li= link_to 'GitHub', 'https://github.com/jure/sciencegist'
       li= link_to 'Twitter', 'https://www.twitter.com/sciencegist'
