--- a/app/views/papers/show.html.slim
+++ b/app/views/papers/show.html.slim
@@ -1,7 +1,8 @@
-div.whatever
-  h2 #{@paper.title}
-  h5= @paper.metadata['authors']
-  h5= @paper.metadata['journal']
-  h2 Gists
-  - @paper.gists.each_with_index do |gist, i|
-    = render 'gists/gist', gist: gist, i: i + 1
+.row
+  .large-12.columns
+    .header= render 'papers/header', paper: @paper
+    h3.paper_gists Gists
+    - @paper.gists.each_with_index do |gist, i|
+      = render 'gists/gist', gist: gist, i: i + 1, display_title: false
+
+    .center.add_gist= link_to 'Add gist for this paper', new_gist_path(identifier: @paper.identifier), class: 'button'
