--- a/app/views/gists/index.html.slim
+++ b/app/views/gists/index.html.slim
@@ -1,7 +1,9 @@
-h1 Your gists
-- if @gists.present?
-  - @gists.each do |gist|
-    = render 'gists/gist', gist: gist
-- else
-  p No gists yet
-  = link_to 'Add gist', new_gist_path, :class => 'btn'
+.row
+  .large-12.columns
+    h1 Your gists
+    - if @gists.present?
+      - @gists.each do |gist|
+        = render 'gists/gist', gist: gist
+    - else
+      p No gists yet
+      = link_to 'Add gist', new_gist_path, :class => 'btn'
