--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -3,7 +3,7 @@ nav.top-bar
     li.name
       h1
         a href="/"
-          = image_tag 'sciencegist-logo-small.png', class: 'logo', width: 24, height: 24
+          = image_tag 'sciencegist-logo-small.png', class: 'logo', width: 32, height: 32
     li.toggle-topbar.menu-icon
       a href="#"
         span
@@ -11,13 +11,15 @@ nav.top-bar
   section.top-bar-section
     ul.right
       li= link_to 'Add gist', new_gist_path
-      - if current_user      
+      - if current_user
         li= link_to 'Your gists', gists_path
+        li= link_to 'Your profile', profile_path(current_user)
       - else
         li= link_to "Sign up", new_user_registration_path
         li= link_to "Sign in", user_session_path
       - if current_user
         li
           = link_to "Log out", destroy_user_session_path, method: 'delete'
+        li= image_tag current_user.gravatar_url(45)
 
 
