More info to the about page.

--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -2,8 +2,13 @@
   .large-12.columns
     .center.logo= image_tag 'logo.png'
     markdown:
-      ScienceGists are simplified summaries of scientific papers. ScienceGist's goal is to provide a [simple English](https://simple.wikipedia.org/wiki/Simple_English_Wikipedia) version of science. ScienceGist is funded (and maintained) by [Jure Triglav](http://www.twitter.com/juretriglav).
+      ScienceGists are simplified summaries of scientific papers. ScienceGist's goal is to provide a [simple English](https://simple.wikipedia.org/wiki/Simple_English_Wikipedia) version of science. 
 
+      We are an open source project and all of our source code is available on our [GitHub repository](http://github.com/jure/sciencegist).
+      
+      ScienceGist is funded (and maintained) by [Jure Triglav](http://www.twitter.com/juretriglav) and any help (either with code or kind words or material means) is greatly appreciated. A very simple way to support ScienceGist is to contribute with GitTip:
+
+    p 
     ' <iframe style="border: 0; margin: 0; padding: 0;"
         src="https://www.gittip.com/jure/widget.html"
         width="48pt" height="22pt"></iframe>
