Move static images to the public folder to avoid asset pipeline digesting

--- a/app/views/layouts/_blog_footer.html.slim
+++ b/app/views/layouts/_blog_footer.html.slim
@@ -3,4 +3,4 @@
     .footer
       | If you would like to help out with ScienceGist or you have some ideas of your own that you would like to chat about, shoot an e-mail to #{ link_to('me@juretriglav.si','mailto:me@juretriglav.si') } or follow me on #{ link_to('Twitter', 'https://twitter.com/ScienceGist')}.&nbsp;
       strong Thanks!
-    = image_tag 'publicdomain.png'
+    = image_tag '/images/publicdomain.png'
