--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -3,7 +3,7 @@ nav.top-bar
     li.name
       h1
         a href="/"
-          = image_tag 'sciencegist-logo-small.png', class: 'logo', width: 32, height: 32
+          = image_tag '/images/sciencegist-logo-small.png', class: 'logo', width: 32, height: 32
     li.toggle-topbar.menu-icon
       a href="#"
         span
