--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -1,6 +1,6 @@
 .row
   .large-12.columns
-    .center.logo= image_tag 'logo.png'
+    .center.logo= image_tag '/images/logo.png'
     markdown:
       ScienceGists are simplified summaries of scientific papers. ScienceGist's goal is to provide a [simple English](https://simple.wikipedia.org/wiki/Simple_English_Wikipedia) version of science. 
 
