--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -1,6 +1,6 @@
 .row
   .large-12.columns
-    .center.logo= image_tag 'logo.png'
+    .center.logo= image_tag '/images/logo.png'
     = render 'search_form'
 
 .row
