--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,17 +1,19 @@
-h2 Sign up
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  div
-    = f.label :email
-    br/
-    = f.email_field :email, :autofocus => true
-  div
-    = f.label :password
-    br/
-    = f.password_field :password
-  div
-    = f.label :password_confirmation
-    br/
-    = f.password_field :password_confirmation
-  div= f.button "Sign up"
-= render "devise/shared/links"
+.row
+  .large-12.columns
+  h2 Sign up
+  = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+    = devise_error_messages!
+    div
+      = f.label :email
+      br/
+      = f.email_field :email, :autofocus => true
+    div
+      = f.label :password
+      br/
+      = f.password_field :password
+    div
+      = f.label :password_confirmation
+      br/
+      = f.password_field :password_confirmation
+    div= f.button "Sign up"
+  = render "devise/shared/links"
