Style fixes for Devise forms. Style fix for alert font weight.

--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -44,3 +44,5 @@ $input-border-style: solid;
 $input-border-width: 1px;
 $input-box-shadow: none;
 $button-font-weight: 600;
+
+$alert-font-weight: 600;
