--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -4,4 +4,4 @@
   .large-4.columns
     = f.input :password, label: false, placeholder: 'Password'
   .large-4.columns
-    = f.button :submit, :value => 'Join', class: 'btn prefix'
+    = f.button :submit, :value => 'Join', class: 'button alert prefix'
