--- a/app/views/papers/_header.html.slim
+++ b/app/views/papers/_header.html.slim
@@ -1,6 +1,9 @@
 h1.paper_title=link_to_unless_current paper.title, paper_path(paper) 
 h5.paper_metadata 
-  span #{paper.metadata['authors']} (#{paper.metadata['journal']})&nbsp;
+  span 
+    #{paper.authors} 
+    - if paper.journal
+      | (#{paper.journal})&nbsp;
   = link_to paper.identifier, paper.url
 - if !defined?(hr) || hr
   hr
