Fix routes and style the DOI/arXiv lookup pages

--- a/app/views/identifiers/arxiv.html.slim
+++ b/app/views/identifiers/arxiv.html.slim
@@ -1,2 +1,4 @@
-h1 ArXiv lookup
-p No papers have been found with the identifier: #{@arxiv}
+.row
+  .large-12.columns
+    h1 ArXiv lookup
+    p No papers have been found with the identifier: #{@arxiv}
