--- a/app/views/identifiers/doi.html.slim
+++ b/app/views/identifiers/doi.html.slim
@@ -1,2 +1,4 @@
-h1 Identifiers#doi
-p Find me in app/views/identifiers/doi.html.slim
+.row
+  .large-12.columns
+    h1 DOI lookup
+    p No papers have been found with the identifier: #{@doi}
